2011-02-19  Mike Frysinger  <vapier@gentoo.org>

  * src/cmd/cmd_bfin.c (cmd_bfin_run): Make sure the part is a Blackfin before
    we try calling functions that don't exist and segfault.

2011-02-18  Mike Frysinger  <vapier@gentoo.org>

  * src/bfin/bfin-part.c (_bfin_part_init): Add missing "void" to param list.

  * include/urjtag/parse.h: Document the various stream functions.

  * include/urjtag/parse.h (urj_parse_line): Constify the "line" argument.
  * src/global/parse.c (urj_parse_line): Likewise.

  * configure.ac: Check for getline().
  * src/global/parse.c (urj_parse_stream): Get rid of line length limitations
    by using getline when it is available.

  * src/part/part.c: Fix indentation style.

  * src/cmd/cmd_get.c: Fix typo in help output.
  * src/cmd/cmd_set.c: Fix typo in help output.
  * src/cmd/cmd_test.c: Fix typo in help output.

  * src/cmd/cmd_shell.c: Clean up help output.

  * data/analog/bfin/bfin: Unify all common Blackfin registers/instructions.
  * data/analog/bf506/bf506, data/analog/bf518/bf518, data/analog/bf527/bf527,
    data/analog/bf533/bf533, data/analog/bf537/bf537, data/analog/bf538/bf538,
    data/analog/bf548/bf548, data/analog/bf561/bf561, data/analog/bf592/bf592:
    Drop duplicated Blackfin settings and include analog/bfin/bfin.

2011-02-17  Mike Frysinger  <vapier@gentoo.org>

  * data/analog/bf548/STEPPINGS: Add bf54x-0.4 support.

2011-02-09  Mike Frysinger  <vapier@gentoo.org>

  * include/urjtag/usbconn.h (urj_usbconn_cable_t): Add an "interface" member.
  * include/urjtag/cable.h (URJ_CABLE_PARAM_KEY_INTERFACE): New key for ftdi.
  * src/tap/cable.c (cable_param): Handle new "interface" key.
  * src/tap/cable/generic_usbconn.c (urj_tap_cable_generic_usbconn_connect):
    Parse new "interface" cable parameter.
  * src/tap/usbconn/libftd2xx.c: Use new "interface" selection.
  * src/tap/usbconn/libftdi.c: Likewise.
  * sysdep.h: Auto undefine "interface" for Windows.

2011-02-06  Mike Frysinger  <vapier@gentoo.org>
